--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -57,12 +57,12 @@ div {
 
 .sidebar {
   width: 25%;
-  height: 100vh;
-  z-index: 1; }
+  height: 100vh; }
   @media only screen and (max-width: 768px) {
     .sidebar {
       height: auto;
-      width: 100%; } }
+      width: 100%;
+      z-index: 1; } }
   .sidebar__container {
     position: fixed;
     height: 100%;
