--- a/src/assets/scss/partials/_search.scss
+++ b/src/assets/scss/partials/_search.scss
@@ -15,7 +15,7 @@
     &__pagination{
         text-align: center;
         &_btn{
-            background: $offwhite;
+            background: $light;
             color: $dark;
             padding: 0.5em 1.3em;
             border-radius: 3px;
