--- a/src/assets/scss/partials/_album.scss
+++ b/src/assets/scss/partials/_album.scss
@@ -18,4 +18,13 @@
             color: $offwhite;
         }
     }
+    @media only screen and (max-width: 450px){
+        flex-direction: column;
+        &__info{
+            width: 100%;
+        }
+        &__tracks{
+            padding: 0 0.7em;
+        }
+    }
 }
