--- a/src/assets/scss/partials/_artistlist.scss
+++ b/src/assets/scss/partials/_artistlist.scss
@@ -32,4 +32,9 @@
             }
         }
     }
+    @media only screen and (max-width: 550px){
+        &__item{
+            width: 50%;
+        }
+    }
 }
