--- a/src/assets/scss/partials/_variables.scss
+++ b/src/assets/scss/partials/_variables.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Rajdhani:300,400,500,600,700');
 
+@import url('https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900');
+
 @font-face {
     font-family: 'Avenir';
     src: url('/src/assets/fonts/AvenirNextLTW01RegularRegular.eot?#iefix') format('embedded-opentype'),
@@ -16,9 +18,17 @@
     font-style: normal;
 }
 
-$font: 'Rajdhani', sans-serif;
+// $font: 'Rajdhani', sans-serif;
+$font: 'Rubik', sans-serif;
 $avenir: 'Avenir';
-$dark: #051923;
-$light: #00A6FB;
+// $dark: #051923;
+// $light: #00A6FB;
+$dark: #0f0f0f;
+$light: #ED254E;
 $offwhite: #FFFFFA;
 $darkgrey: #272D2D;
+$flight: 300;
+$regular: 400;
+$medium: 500;
+$bold: 700;
+$black: 900;
